Fixed app in portrait mode

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,33 +24,58 @@
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
             android:value="face" />
 
-        <activity android:name=".SecurityDeliveryDetails"></activity>
-        <activity android:name=".SecurityCollectDeliveries" />
-        <activity android:name=".CalendarScheduledResident" />
-        <activity android:name=".ManageDeliveryScreen" />
-        <activity android:name=".DeliveryEvent" />
-        <activity android:name=".CalendarEventActivity" />
-        <activity android:name=".SecurityComplaintViewDetails" />
-        <activity android:name=".SecurityComplaintManager" />
-        <activity android:name=".ComplaintDetails" />
-        <activity android:name=".ComplaintLog" />
-        <activity android:name=".Complaints" />
-        <activity android:name=".FeePayment" />
-        <activity android:name=".PreQRScan" />
-        <activity android:name=".QRScan" />
-        <activity android:name=".VisitorQuery" />
-        <activity android:name=".VisitorDetails" />
-        <activity android:name=".SecuritySkipLogin" />
-        <activity android:name=".SecurityRegistration" />
-        <activity android:name=".ResidentSkipLogin" />
-        <activity android:name=".ResidentRegistration" />
-        <activity android:name=".AfterLogin" />
-        <activity android:name=".ForgotAndChangePasswordActivity" />
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".MainActivity" />
+        <activity android:name=".SecurityDeliveryDetails"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".SecurityCollectDeliveries"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".CalendarScheduledResident"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ManageDeliveryScreen"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".DeliveryEvent"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".CalendarEventActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".SecurityComplaintViewDetails"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".SecurityComplaintManager"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ComplaintDetails"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ComplaintLog"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Complaints"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".FeePayment"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".PreQRScan"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".QRScan"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".VisitorQuery"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".VisitorDetails"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".SecuritySkipLogin"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".SecurityRegistration"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ResidentSkipLogin"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ResidentRegistration"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".AfterLogin"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ForgotAndChangePasswordActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".RegisterActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".SplashActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
